--- a/projetos.html
+++ b/projetos.html
@@ -97,72 +97,70 @@
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Reeducação Alimentar</h2>
-            <p>A melhor maneira de emagrecer sem correr o risco de engordar ou sofrer o “efeito sanfona”, é fazer uma reeducação alimentar para poder comer de tudo, mas na quantidade certa, sem ter que recorrer a remédios para emagrecer ou cirurgia, alcançando resultados definitivos. A reeducação alimentar é, sem dúvida, a melhor maneira para emagrecer com saúde e para sempre.</p>
+            <p>A melhor maneira de emagrecer sem correr o risco de engordar ou sofrer o “efeito sanfona” é fazer uma reeducação alimentar para poder comer de tudo, mas na quantidade certa, sem ter que recorrer a remédios para emagrecer ou cirurgia, alcançando resultados definitivos. A reeducação alimentar é, sem dúvida, a melhor maneira para emagrecer com saúde e para sempre.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Ganho de Peso</h2>
-            <p>É preciso ficar claro que ganhar peso é diferente de engordar. Engordar quer dizer que aumenta a quantidade de gordura corporal o que, na maioria das vezes, é indesejável. Já o ganho de peso, pode significar aumento de gordura ou massa magra. É preciso primeiro diferenciar a vontade de ganho de peso que há em uma pessoa que sempre foi magra, da necessidade que há, quando uma pessoa está desnutrida, ou enfrenta um quadro de anorexia nervosa ou passou por uma doença ou trauma. Em ambos os o cuidado nutricional é diferente e deve ser conduzido por um nutricionista. </p>
+            <p>É preciso ficar claro que ganhar peso é diferente de engordar. Engordar significa aumento da quantidade de gordura corporal o que, na maioria das vezes, é indesejável. Já o ganho de peso, está atrelado ao aumento de massa magra. É preciso primeiro diferenciar a vontade de ganho de peso que há em uma pessoa que sempre foi magra, da necessidade que há quando uma pessoa está desnutrida, enfrenta um quadro de anorexia nervosa ou passou por uma doença/trauma. Em ambos, os cuidados nutricionais são diferentes e devem ser conduzidos por um nutricionista.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Nutrição para Crianças e Adolescentes</h2>
-            <p>Quando o assunto é nutrição para as crianças e adolescentes, muitas são as dificuldades alegadas pelas famílias.  Devemos saber que cada faixa etária apresenta uma demanda nutricional específica. Sendo assim, a oferta de nutrientes é de grande importância para um adequado crescimento e desenvolvimento corporal. Uma alimentação ruim, além de causar prejuízos como atraso no desenvolvimento e/ou falta de nutrientes, pode causar patologias na vida adulta, como: obesidade, diabetes, hipertensão entre outras doenças crônicas. </p>
+            <p>Quando o assunto é nutrição para as crianças e adolescentes muitas são as dificuldades alegadas pelas famílias.  Devemos saber que cada faixa etária apresenta uma demanda nutricional específica. Sendo assim, a oferta de nutrientes é de grande importância para um adequado crescimento e desenvolvimento corporal. Uma alimentação ruim, além de causar prejuízos como o atraso no desenvolvimento e/ou falta de nutrientes, pode causar patologias na vida adulta, como obesidade, diabetes, hipertensão, entre outras doenças crônicas.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Nutrição para Gestantantes e Lactantes</h2>
-            <p>Tanto à fase da gestação como da lactação, são um momento para fazer escolhas saudáveis, a fim de ganhar somente o peso necessário para o desenvolvimento do bebê. Para uma gestação saudável, é essencial que se adote uma alimentação equilibrada, pois isso pode evitar problemas sérios, como o diabetes gestacional, pré-eclâmpsia, etc. Os nove meses de gestação e a fase de lactação, exigem uma alimentação equilibrada, com todos os grupos alimentares, o que não significa comer exageradamente. Mas, em determinados períodos, o consumo de certos nutrientes deve ser reforçado. Então para isso, procure um nutricionista. </p>
+            <p>Tanto a fase da gestação como da lactação são um momento para fazer escolhas saudáveis, a fim de ganhar somente o peso necessário para o desenvolvimento do bebê. Para uma gestação saudável é essencial adotar uma alimentação equilibrada, pois isso pode evitar problemas sérios, como o diabetes gestacional, pré-eclâmpsia, etc. Os nove meses de gestação e a fase de lactação exigem uma alimentação equilibrada, com todos os grupos alimentares, o que não significa comer exageradamente. Mas, em determinados períodos, o consumo de certos nutrientes deve ser reforçado. Para isso, procure um nutricionista.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Nutrição para pré e pós-operatório</h2>
-            <p>A alimentação pré-operatória tem influência no sucesso da cirurgia e pode ajudar a reduzir as complicações pós-cirúrgicas. Antes e após um procedimento operatório alguns cuidados com a alimentação são fundamentais para uma adequada recuperação. </p>
+            <p>A alimentação pré-operatória tem influência no sucesso da cirurgia e pode ajudar a reduzir as complicações pós-cirúrgicas. Antes e após um procedimento operatório alguns cuidados com a alimentação são fundamentais para uma adequada recuperação.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Nutrição para o Tratamento e Prevenção de Doenças</h2>
-            <p>Diversas doenças como as cardíacas, diabetes, pressão alta e muitas outras podem ser evitadas quando é relacionada a uma alimentação saudável. Mas se você já desenvolveu alguma doença crônica (diabetes, obesidade ou hipertensão), ou cardíaca, procurar um nutricionista é ainda mais importante. A orientação nutricional unida ao tratamento médico adequado, colabora para um melhor controle de algumas doenças.
-        O nutricionista é um profissional de saúde que pode orientá-lo em todos os aspectos que envolvem sua alimentação. </p>
+            <p>Doenças cardíacas, diabetes, pressão alta, entre outras podem ser evitadas quando relacionada a uma alimentação saudável. Mas, se você já desenvolveu alguma doença crônica (diabetes, obesidade ou hipertensão) ou cardíaca, procurar um nutricionista é ainda mais importante. A orientação nutricional unida ao tratamento médico adequado colabora para um melhor controle de algumas doenças. O nutricionista é um profissional de saúde que pode orientá-lo em todos os aspectos que envolvem sua alimentação.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Nutrição para Idosos</h2>
-            <p>Você já parou para refletir sobre a importância dos cuidados com a alimentação para idosos? Uma alimentação adequada na terceira idade é tão (ou até mais) importante do que em qualquer outra faixa etária. Afinal, as pessoas que já viveram mais, também necessitam de nutrientes para se manterem saudáveis. A “melhor idade” é uma etapa marcada por mudanças. Além disso, doenças crônicas são muito comuns nessa idade; e a maioria delas, pode ser agravada ou aliviada por meio dos alimentos ingeridos.</p>
+            <p>Você já parou para refletir sobre a importância dos cuidados com a alimentação para idosos? Uma alimentação adequada na terceira idade é tão (ou até mais) importante do que em qualquer outra faixa etária. Afinal, as pessoas que já viveram mais, também necessitam de nutrientes para se manterem saudáveis. A “melhor idade” é uma etapa marcada por mudanças. Além disso, doenças crônicas são muito comuns nessa idade e, a maioria delas, podem ser agravadas ou aliviadas por meio dos alimentos ingeridos.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Nutrição para Noivas</h2>
-            <p>O acompanhamento nutricional específico para as noivas, tem o objetivo que a noiva chegue no dia do seu casamento com o corpo que tanto deseja e com muita energia e disposição para curtir todos os momentos do seu grande dia. 
-        Sei que as preocupações referentes aos detalhes do casamento, fazem com que se tenha perda ou ganho de peso de forma indesejada. Além disso, é muito comum a perda de sono, irritabilidade, cansaço, queda de cabelo e até o aparecimento de espinhas. Então, procure um nutricionista para prescrever um plano alimentar mais adequado para você. </p>
+            <p>O acompanhamento nutricional específico para as noivas tem o objetivo que esta chegue no dia do seu casamento com o corpo que tanto deseja e com muita energia e disposição para curtir todos os momentos do seu grande dia. As preocupações referentes aos detalhes do casamento fazem com que ocorra perda ou ganho de peso de forma indesejada. Além disso, é muito comum a perda de sono, irritabilidade, cansaço, queda de cabelo e até o aparecimento de espinhas. Então, procure um nutricionista para prescrever um plano alimentar adequado para você.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Nutrição para Ganho de Massa Magra e Hipertrofia</h2>
-            <p>Uma dieta equilibrada é o ponto de partida pra quem deseja a hipertrofia e ganho de massa muscular. Muitas pessoas se enganam, acreditando que para obter o ganho de massa magra, não adianta comer o que bem entender e se matar de tanto malhar. A musculação não surtirá nenhum efeito se, ao mesmo tempo, não for feita uma dieta balanceada. Procure um nutricionista para que ele adeque os macro e micronutrientes ao seu objetivo. </p>
+            <p>Uma dieta equilibrada é o ponto de partida pra quem deseja a hipertrofia e ganho de massa muscular. Muitas pessoas se enganam acreditando que para obter o ganho de massa magra basta malhar com muita frequência. A musculação não surtirá nenhum efeito se não for acompanhada por uma dieta balanceada. Procure um nutricionista para que ele adeque os macro e micronutrientes ao seu objetivo.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Consultoria em Nutrição</h2>
-            <p>O objetivo é criar uma parceria com os proprietários de supermercados, restaurantes de pequeno ou médio porte, padarias, lanchonetes, hotéis, e outros segmentos de alimentação coletiva, auxiliando-os na adequação de suas práticas de produção às normas vigentes da Vigilância Sanitária, garantindo refeições nutritivas, higienicamente adequadas e saudáveis à todos.</p>
+            <p>O objetivo é criar uma parceria com os proprietários de supermercados, restaurantes de pequeno ou médio porte, padarias, lanchonetes, hotéis e outros segmentos de alimentação coletiva, auxiliando-os na adequação de suas práticas de produção às normas vigentes da Vigilância Sanitária, garantindo refeições nutritivas, higienicamente adequadas e saudáveis a todos.</p>
           </div>
         </div>
 
