--- a/index.html
+++ b/index.html
@@ -318,14 +318,14 @@
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Atendimento em Consultório</h2>
-            <p>As consultas visam promover conscientização e reeducação alimentar. Após avaliação física, são determinadas as metas e os objetivos de cada paciente, para que um planejamento alimentar personalizado e individualizado, possa ser definido. São também indicados, quando necessário, suplementos vitamínicos, minerais, fitoterápicos ou aminoácidos, de acordo com o objetivo e meta definidos. Outro ponto importante é a sugestão de receitas e indicações de marcas e fornecedores, para que seja mais fácil colocar em prática o plano alimentar. A cada nova consulta, avaliaremos e redefiniremos as novas metas, de acordo com os resultados. Com apoio, muito conversa e troca de informações, será mais fácil incorporar os novos hábitos e acessar de verdade a qualidade de vida.</p>
+            <p>As consultas visam promover conscientização e reeducação alimentar. Após avaliação física são determinadas as metas e os objetivos de cada paciente, para que um planejamento alimentar personalizado e individualizado possa ser definido. São também indicados, quando necessário, suplementos vitamínicos, minerais, fitoterápicos ou aminoácidos, de acordo com o objetivo e meta definidos. Outro ponto importante é a sugestão de receitas e indicações de marcas e fornecedores para que seja mais fácil colocar em prática o plano alimentar. A cada nova consulta, avaliaremos e redefiniremos as novas metas de acordo com os resultados alcançados. Com apoio, muito conversa e troca de informações será mais fácil incorporar os novos hábitos alimentares e acessar de verdade a qualidade de vida.</p>
           </div>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-md-12">
             <h2 class="mb-4">Atendimento Domiciliar</h2>
-            <p>O atendimento domiciliar tem o objetivo de oferecer aos pacientes e a seus familiares, a possibilidade de assistência nutricional aliada ao conforto do lar. E também proporciona maior conforto e segurança aos pacientes portadores de doenças crônico-degenerativas.</p>
+            <p>O atendimento domiciliar tem o objetivo de oferecer aos pacientes e a seus familiares a possibilidade de assistência nutricional aliada ao conforto do lar. Proporciona também maior conforto e segurança aos pacientes portadores de doenças crônico-degenerativas.</p>
           </div>
         </div>
       </div>
@@ -445,8 +445,11 @@
               </div>
             </div>
           </div>
-          <img class="col-md-6" src="images/IMG18.jpg">
+          <div class="col-md-6">
+            <img class="img-fluid" src="images/IMG21.jpg">
+          </div>
         </div>
+
       </div>
     </section>
 
@@ -501,7 +504,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><a href="tel://31996446591"><span class="icon icon-phone"></span><span class="text">(31) 99644-6591</span></a></li>
-	                <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank">contato@daninutri.fit</span></a></li>
+	                <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank"><span class="icon icon-paper-plane"></span><span class="text">contato@daninutri.fit</span></a></li>
 	              </ul>
 	            </div>
             </div>
