--- a/projetos.html
+++ b/projetos.html
@@ -216,7 +216,7 @@
               <div class="block-23 mb-3">
                 <ul>
                   <li><a href="tel://31996446591"><span class="icon icon-phone"></span><span class="text">(31) 99644-6591</span></a></li>
-                  <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank">contato@daninutri.fit</span></a></li>
+                  <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank"><span class="icon icon-paper-plane"></span><span class="text">contato@daninutri.fit</span></a></li>
                 </ul>
               </div>
             </div>
