--- a/receitas.html
+++ b/receitas.html
@@ -98,7 +98,9 @@
           <div class="col-md-12 justify-content-center">
             <h3>Hambúrguer de Abobrinha</h3>
           </div>
-          <img class="col-md-6" src="images/receitas/R01.png">
+          <div class="col-md-6">
+            <img class="img-fluid" src="images/receitas/R01.png">
+          </div>
           <div class="col-md-6">
             <h3>Ingredientes:</h3>
             <ul>
@@ -115,6 +117,46 @@
               <li>Unte uma frigideira com azeite e disponha os hambúrgueres para grelhar.</li>
               <li>Deixe fritar por 2 minutos antes de virar, cuidado para não queimar. O hambúrguer estará pronto quando estiver bem sequinho.</li>
             </ol>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12 justify-content-center">
+            <h3>Bolo de Cenoura sem Glúten</h3>
+          </div>
+          <div class="col-md-6">
+            <img class="img-fluid" src="images/receitas/R02.jpg">
+          </div>
+          <div class="col-md-6">
+            <h3>Ingredientes:</h3>
+            <ul>
+              <li>4 cenouras pequenas picadas em rodelas;</li>
+              <li>1/2 xícara de óleo de coco;</li>
+              <li>4 ovos;</li>
+              <li>2 xícaras de açúcar demerara ou açúcar mascavo;</li>
+              <li>1 pitada de sal;</li>
+              <li>1 xícara de farinha de arroz integral;</li>
+              <li>1 colher de sopa de fermento em pó;</li>
+              <li>Baunilha a gosto.</li>
+            </ul>
+            <h3>Ingredientes da cobertura:</h3>
+            <ul>
+              <li>2 colheres de sopa de chocolate 100% ou chocolate em pó 50%;</li>
+              <li>3 colheres de açúcar demerara;</li>
+              <li>1 colher de sopa de óleo de coco;</li>
+              <li>5 colheres de sopa de leite de coco;</li>
+            </ul>
+            <h3>Modo de preparo:</h3>
+            <ol>
+              <li>Inicie untando uma forma retangular de 20×30 cm com um pouco de óleo e polvilhe farinha de arroz.</li>
+              <li>Pré-aqueça o forno a 180ºC.  Esta receita é rápida e o forno precisa estar quente quando você colocar o bolo para assar.</li>
+              <li>Em uma bacia grande adicione a farinha de arroz e o fermento em pó. Mexa para misturar os secos.</li>
+              <li>Adicione, no liquidificador, a cenoura, o óleo, os ovos, o açúcar, uma pitada de sal e baunilha. Bata bem até formar uma massa lisa e uniforme.</li>
+              <li>Depois é só colocar a massa de cenoura com os secos já misturados e mexer bem até que a massa fique homogênea.</li>
+              <li>Despeje a massa na forma untada e leve para assar em forno pré-aquecido a 180ºC por 30-35 minutos ou até que você faça o teste do palito e ele saia limpo.</li>
+            </ol>
+            <h3>Modo de preparo - cobertura:</h3>
+            <p>Depois que o bolo estiver pronto coloque todos os ingredientes da cobertura em uma panela, ligue em fogo alto e mexa com uma colher até que a mistura engrosse. Após aproximadamente 5 minutos de forno, você perceberá bolhas maiores e começará a aparecer o fundo da panela conforme você mexe. Despeje a cobertura imediatamente no bolo e deixe esfriar por completo.</p>
           </div>
         </div>
 
@@ -173,7 +215,7 @@
               <div class="block-23 mb-3">
                 <ul>
                   <li><a href="tel://31996446591"><span class="icon icon-phone"></span><span class="text">(31) 99644-6591</span></a></li>
-                  <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank">contato@daninutri.fit</span></a></li>
+                  <li><a href="mailto:contato@daninutri.fit?subject=Agendamento de Consulta&body=Olá, tudo bem? Gostaria de agendar uma consulta com a Nutri." target="_blank"><span class="icon icon-paper-plane"></span><span class="text">contato@daninutri.fit</span></a></li>
                 </ul>
               </div>
             </div>
