--- a/receitas.html
+++ b/receitas.html
@@ -160,6 +160,40 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-md-12 justify-content-center">
+            <h3>Pão de Queijo de Batata Baroa</h3>
+          </div>
+          <div class="col-md-6">
+            <img class="img-fluid" src="images/receitas/R03.jpeg">
+          </div>
+          <div class="col-md-6">
+            <h3>Ingredientes:</h3>
+            <ul>
+              <li>1 copo e meio (americano) de polvilho doce;</li>
+              <li>1 copo e meio (americano) de polvilho azedo;</li>
+              <li>1/2 copo americano de azeite de oliva extra virgem;</li>
+              <li>250g de batata baroa cozida e amassada;</li>
+              <li>Sal a gosto.</li>
+            </ul>
+            <h3>Opcional:</h3>
+            <ul>
+              <li>100g de sementes de girassol;</li>
+              <li>100g de sementes de chia.</li>
+            </ul>
+            <h3>Modo de preparo:</h3>
+            <ol>
+              <li>Em uma tigela, misture o polvilhe doce, o polvilho azedo, o azeite e o sal.</li>
+              <li>Acrescente a batata baroa amassada e ainda quente.</li>
+              <li>Misture tudo muito bem e, caso opte por colocar os grãos, adicione-os nessa etapa.</li>
+              <li>Faça pãezinhos do tamanho que quiser.</li>
+              <li>Coloque-os em uma assadeira e leve ao forno por cerca de 30min a 200°C ou na airfryer por 15min a 220°C.</li>
+            </ol>
+            <h3>Dica:</h3>
+            <p>Os pãezinhos, ainda sem assar, podem ser congelados e depois levados direto ao forno.</p>
+          </div>
+        </div>
+
 
       </div>
     </section>
