--- a/receitas.html
+++ b/receitas.html
@@ -93,7 +93,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row recipe-item">
           <div class="col-md-12 justify-content-center">
             <h3>Pão de Queijo de Batata Baroa</h3>
           </div>
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row recipe-item">
           <div class="col-md-12 justify-content-center">
             <h3>Bolo de Cenoura sem Glúten</h3>
           </div>
@@ -167,7 +167,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row recipe-item">
           <div class="col-md-12 justify-content-center">
             <h3>Hambúrguer de Abobrinha</h3>
           </div>
