--- a/receitas.html
+++ b/receitas.html
@@ -98,7 +98,7 @@
             <h3>Pão de Queijo de Batata Baroa</h3>
           </div>
           <div class="col-md-6">
-            <img class="img-fluid" src="images/receitas/R03.jpeg">
+            <img class="img-fluid" src="images/receitas/R03.jpg">
           </div>
           <div class="col-md-6">
             <h3>Ingredientes:</h3>
